--- a/Software/app/src/main/res/values/colors.xml
+++ b/Software/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#3988FD</color>
+    <color name="yellow">#FFE74C</color>
+    <color name="green">#89F64D</color>
+    <color name="red">#FF3636</color>
 
 <!--    Demo Colors-->
     <color name="colorOnPrimaryDemo">#fff</color>
