--- a/Software/app/src/main/res/values/colors.xml
+++ b/Software/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#717171</color>
     <color name="blue">#3988FD</color>
     <color name="yellow">#FFE74C</color>
     <color name="green">#89F64D</color>
